--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://p-ortega.github.io/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.bf5f9f73cf17311d52cedbcda82c922e91b2f566d88a85ad9f5b5a08b586bd5f.css" integrity="sha256-v1&#43;fc88XMR1SztvNqCySLpGy9WbYioWtn1taCLWGvV8=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://p-ortega.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://p-ortega.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://p-ortega.github.io/favicon-32x32.png">
