--- a/search/index.html
+++ b/search/index.html
@@ -10,8 +10,8 @@
 <meta name="description" content="search">
 <meta name="author" content="">
 <link rel="canonical" href="https://p-ortega.github.io/search/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.bf5f9f73cf17311d52cedbcda82c922e91b2f566d88a85ad9f5b5a08b586bd5f.css" integrity="sha256-v1&#43;fc88XMR1SztvNqCySLpGy9WbYioWtn1taCLWGvV8=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
-<script defer crossorigin="anonymous" src="/assets/js/search.c96efee53dc2fcd4e3bdb71a6ab564028a36f4c0bbdfbfc8480c089fdfa274cd.js" integrity="sha256-yW7&#43;5T3C/NTjvbcaarVkAoo29MC737/ISAwIn9&#43;idM0="></script>
+<link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<script defer crossorigin="anonymous" src="/assets/js/search.js"></script>
 <link rel="icon" href="https://p-ortega.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://p-ortega.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://p-ortega.github.io/favicon-32x32.png">
