--- a/test_docs/test/index.html
+++ b/test_docs/test/index.html
@@ -11,9 +11,8 @@
 - This is a test page - This is a test page - This is a test page Syntax Description Header Title Paragraph Text ``` Look! You can see my backticks. ``` Title 2 Other title ">
 <meta name="author" content="">
 <link rel="canonical" href="https://p-ortega.github.io/test_docs/test/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.bf5f9f73cf17311d52cedbcda82c922e91b2f566d88a85ad9f5b5a08b586bd5f.css" integrity="sha256-v1&#43;fc88XMR1SztvNqCySLpGy9WbYioWtn1taCLWGvV8=" rel="preload stylesheet" as="style">
-<script defer crossorigin="anonymous" src="/assets/js/highlight.acb54fd32bbc1982428b8850317e45d076b95012730a5936667e6bc21777692a.js" integrity="sha256-rLVP0yu8GYJCi4hQMX5F0Ha5UBJzClk2Zn5rwhd3aSo="
-    onload="hljs.initHighlightingOnLoad();"></script>
+<link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
+<script defer crossorigin="anonymous" src="/assets/js/highlight.js" onload="hljs.initHighlightingOnLoad();"></script>
 <link rel="icon" href="https://p-ortega.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://p-ortega.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://p-ortega.github.io/favicon-32x32.png">
